improved image send

--- a/views/room.ejs
+++ b/views/room.ejs
@@ -941,7 +941,7 @@ let typing = false;
        let img = document.createElement('img');
         img.setAttribute('src' , data.data);
         img.setAttribute('width' , '350');
-        img.setAttribute('id' , 'revieved-image');
+        img.setAttribute('id' , 'recieved-image');
      
 
         imageDiff.append(img);
