--- a/views/room.ejs
+++ b/views/room.ejs
@@ -232,6 +232,7 @@
           flex-direction: row;
           justify-content: flex-end;
           align-items: center;
+          margin-left:50em;
         }
         #audio-diff{
        
