preventing back button press

--- a/views/room.ejs
+++ b/views/room.ejs
@@ -1170,6 +1170,11 @@ let typing = false;
 
  }
 
+ function preventBack() { window.history.forward(); }  
+    setTimeout("preventBack()", 0);  
+    window.onunload = function () { null };  
+
+
     </script>
 </body>
 </html>
