--- a/views/intro.ejs
+++ b/views/intro.ejs
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <title>Link Up</title>
     <meta name="viewport" content="width=device-width">
+    <meta name="keywords" content="LinkUp, LINKUP, Link Up, link up, Kavish Tomar, javascript, html, Physics Boy, linkup, linkupweb.ml, linkupweb, social media sites, social media websites, social media">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Arimo:wght@600&family=Josefin+Sans&family=Nova+Flat&family=Oxygen:wght@700&family=Source+Code+Pro&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
