changed instagram link

--- a/views/intro.ejs
+++ b/views/intro.ejs
@@ -436,7 +436,7 @@
 
                 <div id = "promotion-links">
                     <h5 id = "guide">Follow the developer on</h5>
-                    <a href="https://www.instagram.com/kavish_tomar.4/"><img src = "https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/1024px-Instagram_icon.png" width="30"/></a>&nbsp&nbsp&nbsp&nbsp<a href="https://twitter.com/KavishTomar4"><img src="https://cdn3.iconfinder.com/data/icons/basicolor-reading-writing/24/077_twitter-512.png" width="30"/></a>&nbsp&nbsp&nbsp&nbsp<a href="https://github.com/KavishTomar4"><img src="https://image.flaticon.com/icons/png/512/25/25231.png" width="30"/></a>
+                    <a href="https://www.instagram.com/kaavishtomar/?hl=en"><img src = "https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/1024px-Instagram_icon.png" width="30"/></a>&nbsp&nbsp&nbsp&nbsp<a href="https://twitter.com/KavishTomar4"><img src="https://cdn3.iconfinder.com/data/icons/basicolor-reading-writing/24/077_twitter-512.png" width="30"/></a>&nbsp&nbsp&nbsp&nbsp<a href="https://github.com/KavishTomar4"><img src="https://image.flaticon.com/icons/png/512/25/25231.png" width="30"/></a>
                     </div>  
               </footer>
 
@@ -447,7 +447,7 @@
   
                   <div id = "promotion-links-mobile">
                       <h5 id = "guide-mobile">Follow the developer on</h5>
-                      <div><a href="https://www.instagram.com/kavish_tomar.4/"><img src = "https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/1024px-Instagram_icon.png" width="30"/></a>&nbsp&nbsp&nbsp&nbsp<a href="https://twitter.com/KavishTomar4"><img src="https://cdn3.iconfinder.com/data/icons/basicolor-reading-writing/24/077_twitter-512.png" width="30"/></a>&nbsp&nbsp&nbsp&nbsp<a href="https://github.com/KavishTomar4"><img src="https://image.flaticon.com/icons/png/512/25/25231.png" width="30"/></a></div>
+                      <div><a href="https://www.instagram.com/kaavishtomar/?hl=en"><img src = "https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/1024px-Instagram_icon.png" width="30"/></a>&nbsp&nbsp&nbsp&nbsp<a href="https://twitter.com/KavishTomar4"><img src="https://cdn3.iconfinder.com/data/icons/basicolor-reading-writing/24/077_twitter-512.png" width="30"/></a>&nbsp&nbsp&nbsp&nbsp<a href="https://github.com/KavishTomar4"><img src="https://image.flaticon.com/icons/png/512/25/25231.png" width="30"/></a></div>
                       </div>  
                   </footer>
 
