added description and author name

--- a/views/intro.ejs
+++ b/views/intro.ejs
@@ -2,6 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Link Up</title>
+    <link rel = "site_icon" type="image/png" href="https://i.imgur.com/ONf2NGL.png"/>
     <meta name="viewport" content="width=device-width">
     <meta name="keywords" content="LinkUp, LINKUP, Link Up, link up, Kavish Tomar, javascript, html, Physics Boy, linkup, linkupweb.ml, linkupweb, social media sites, social media websites, social media">
     <link rel="preconnect" href="https://fonts.gstatic.com">
