--- a/views/room.ejs
+++ b/views/room.ejs
@@ -3,7 +3,9 @@
     <meta charset="UTF-8">
     <meta name='viewport' content='width=device-width'>
     <meta name="viewport" content="width=device-width">
+    <meta name="author" content="Kavish Tomar">
     <title>Room</title>
+    <link rel = "site_icon" type="image/png" href="https://i.imgur.com/ONf2NGL.png"/>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Arimo:wght@600&family=Josefin+Sans&family=Nova+Flat&family=Oxygen:wght@700&family=Source+Code+Pro&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
