--- a/views/intro.ejs
+++ b/views/intro.ejs
@@ -3,8 +3,10 @@
     <meta charset="UTF-8">
     <title>Link Up</title>
     <link rel = "site_icon" type="image/png" href="https://i.imgur.com/ONf2NGL.png"/>
+    <meta name="description" content="Link Up is a social media website developed by Kavish Tomar which enables you to interact with your friends in a temporary room.">
     <meta name="viewport" content="width=device-width">
     <meta name="keywords" content="LinkUp, LINKUP, Link Up, link up, Kavish Tomar, javascript, html, Physics Boy, linkup, linkupweb.ml, linkupweb, social media sites, social media websites, social media">
+    <meta name="author" content="Kavish Tomar">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Arimo:wght@600&family=Josefin+Sans&family=Nova+Flat&family=Oxygen:wght@700&family=Source+Code+Pro&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
