--- a/views/room.ejs
+++ b/views/room.ejs
@@ -57,6 +57,7 @@
             margin-left : 10em;
             min-height: 600px;
             width : 15em;
+            box-shadow: -1px 1px 7px grey;
             text-align: center;
         }
         #display-users{
